        PR c++/17256         * decl2.c (cp_finish_file): Fix conditions for undefined warning.         Set TREE_NO_WARNING instead of TREE_PUBLIC.         * pt.c (instantiate_pending_templates): Set DECL_INITIAL to avoid         a warning on a function we didn't instantiate because of excessive         recursion.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@106581 138bc75d-0d04-0410-961f-82ee72b054a4